--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_troubleMaker"
             android:icon="@drawable/ic_record_voice_over_white_24dp"
-            android:title="Trouble Maker" />
+            android:title="@string/activity_trouble_maker" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_white_24dp"
