--- a/app/src/main/res/menu/tm_menu.xml
+++ b/app/src/main/res/menu/tm_menu.xml
@@ -3,12 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_stop"
-        android:icon="@drawable/ic_stop_white_24dp"
-        android:title="Stop"
+        android:icon="@drawable/ic_do_not_disturb_on_white_24dp"
+        android:title="@string/stop"
         app:showAsAction="always" />
     <item
         android:id="@+id/menu_stop_timer"
         android:icon="@drawable/ic_timer_white_24dp"
         android:title="@string/stop_timer"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_settings"
+        android:icon="@drawable/ic_settings_white_24dp"
+        android:title="@string/activity_settings" />
 </menu>
