--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -12,7 +12,7 @@
 		<intent
 			android:action="android.intent.action.VIEW"
 			android:targetPackage="com.canwdev.noise"
-			android:targetClass="com.canwdev.noise.TroubleMakerActivity" />
+			android:targetClass="com.canwdev.noise.TroubleMaker.TroubleMakerActivity" />
 		<categories android:name="android.shortcut.conversation" />
 	</shortcut>
 
