--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,18 +2,16 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_random_play"
-        android:icon="@drawable/ic_shuffle_white_24dp"
-        android:title="@string/random"
-        app:showAsAction="ifRoom" />
-    <item
         android:id="@+id/menu_reset"
-        android:icon="@drawable/ic_stop_white_24dp"
+        android:icon="@drawable/ic_do_not_disturb_on_white_24dp"
         android:title="@string/stop"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_stop_timer"
         android:icon="@drawable/ic_timer_white_24dp"
-        android:title="@string/stop_timer"
-        app:showAsAction="always" />
+        android:title="@string/stop_timer" />
+    <item
+        android:id="@+id/menu_random_play"
+        android:icon="@drawable/ic_shuffle_white_24dp"
+        android:title="@string/random" />
 </menu>
