--- a/app/src/main/res/layout-xhdpi/activity_detail_view.xml
+++ b/app/src/main/res/layout-xhdpi/activity_detail_view.xml
@@ -47,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:src="@drawable/ic_shuffle_white_24dp"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_anchor="@id/app_bar_share_view"
         app:layout_anchorGravity="bottom|end" />
 
