--- a/app/src/main/res/layout/layout_item_grid.xml
+++ b/app/src/main/res/layout/layout_item_grid.xml
@@ -4,12 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="95dp"
     android:layout_gravity="center"
-    android:layout_margin="@dimen/def_margin_small"
     android:foreground="?android:attr/selectableItemBackground"
     android:gravity="center"
     android:orientation="vertical"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp">
+    app:cardCornerRadius="6dp"
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:background="@color/transparentDark"
+            android:background="@drawable/image_filter_shadow"
             android:gravity="center_horizontal"
             android:text="TextView"
             android:textColor="@android:color/background_light"
