--- a/app/src/main/res/layout/main_nav_header.xml
+++ b/app/src/main/res/layout/main_nav_header.xml
@@ -6,7 +6,7 @@
     android:layout_height="150dp"
     android:background="@color/colorPrimaryDark"
     android:clickable="true"
-    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:foreground="?android:attr/selectableItemBackground"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="10dp"
@@ -21,26 +21,35 @@
             android:id="@+id/imageView_nav_header"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            app:srcCompat="@drawable/icon_logo" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@mipmap/ic_launcher_foreground" />
 
-        <TextView
-            android:id="@+id/textView2"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/app_name"
-            android:textColor="@color/colorAccent"
-            android:textSize="24sp" />
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textColor="@color/colorAccent"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/text_nav_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/about_intro"
+                android:textColor="@color/colorAccent"
+                android:textSize="14sp" />
+        </LinearLayout>
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/text_nav_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="64dp"
-        android:text="@string/about_intro"
-        android:textColor="@color/colorAccent"
-        android:textSize="14sp" />
 
 </LinearLayout>
